# dlgo

./: .gitignore  pyproject.toml
scripts/: generate_mcts_games.py  pruned_go.py
scripts/play/: bot_v_bot.py  human_v_bot.py
scripts/utils/: generate_zobrist.py
src/dlgo/: goboard.py  goboard_slow.py  scoring.py  utils.py
src/dlgo/agent/: helpers.py  naive.py  predict.py  termination.py
src/dlgo/encoders/: base.py  oneplane.py  sevenplane.py  simple.py
src/dlgo/gosgf/: sgf.py  sgf_grammar.py  sgf_properties.py
src/dlgo/gtp/: play_local.py
src/dlgo/mcts/: mcts.py
src/dlgo/minimax/: alphabeta.py  depthprune.py  minimax.py
src/dlgo/networks/: alphago.py  alphago_zero.py  fullyconnected.py  large.py  leaky.py  medium.py  small.py
src/dlgo/rl/: experience.py
