[project]
name = "dlgo"
version = "0.1.0"
description = "Forked from maxpumperla/deep_learning_and_the_game_of_go."
authors = [{name = "iuhgnor", email = "1477180107@qq.com"}]
dependencies = []
requires-python = ">= 3.11"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]
conda-pypi-map = { "conda-forge" = ".pixi/conda_pypi_mapping.json" }

[tool.pixi.pypi-options]
index-url = "https://mirrors.aliyun.com/pypi/simple"
extra-index-urls = ["https://pypi.tuna.tsinghua.edu.cn/simple", "https://pypi.org/simple"]

[tool.pixi.pypi-dependencies]
dlgo = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
numpy = ">=2.3.3,<3"
h5py = ">=3.14.0,<4"
keras = ">=3.11.2,<4"
pytorch = ">=2.7.1,<3"
